<resources>
    <string name="app_name">Mobile Weather Guide</string>
    <string name="preferences_filename">shared_application_preferences</string>
    <string name="location_id">location_id</string>
    <string name="location_display_name">location_display_name</string>
    <string name="location_help_text">To change your location, please start typing and then select your city from autocomplete field</string>
    <string name="location_autocomplete_hint">Please start typing here</string>
    <string name="location_use_device_location_button">Use device location</string>
    <string name="location_use_device_location_help_text">NOTE: Last known device location will be used upon clicking \"USE DEVICE LOCATION\" button. To ensure accuracy, please update your device location by using google maps or other services that make use of Location or GPS services.</string>
    <string name="initial_location_change_hint">Location can be changed at any time by navigating to \"Location\" screen and updating your location.</string>
    <string name="initial_location_subheading">Before we begin, please select your location.</string>
    <string name="initial_location_heading">Welcome to Mobile Weather Guide!</string>
    <string name="menu_location">Location</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_preferences">Preferences</string>
    <string name="url_api_key">appid=d9d8bec8ab1806f5096d7734167da78e</string>
    <string name="current_weather_url">http://api.openweathermap.org/data/2.5/weather?id=</string>
    <string name="current_weather_url_lat_lon">http://api.openweathermap.org/data/2.5/weather?lat=</string>
    <string name="current_uvindex_url">http://api.openweathermap.org/v3/uvi/</string>
    <string name="hourly_weather_url">http://api.openweathermap.org/data/2.5/forecast?id=</string>
    <string name="hourly_weather_count_url">4</string>
    <string name="weather_forecast_url">http://api.openweathermap.org/data/2.5/forecast/daily?cnt=</string>
    <string name="weather_forecast_count_url">14</string>
    <string name="current_weather_next_12_hours">NEXT 12 HOURS</string>
    <string name="weather_forecast_temperature">TEMPERATURE</string>
    <string name="weather_forecast_slide_right">&gt;</string>
    <string name="weather_forecast_slide_left">&lt;</string>
    <string name="weather_forecast_navigation_info">Swipe screen or use buttons to navigate between screens</string>
    <string name="data_not_available">DATA IS NOT AVAILABLE</string>
    <string name="not_applicable">N/A</string>
    <string name="alertTitle">Weather Alert</string>
    <string name="alertText">Following weather alert(s) are expected in the next 24 hours:</string>

    <!-- Navigation drawer toggle items -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_main_menu">Main Menu</string>
    <string name="drawer_icon_description">Drawer Icon</string>

    <!-- UV Index levels -->
    <string name="uvindex_level_low">Low</string>
    <string name="uvindex_level_moderate">Moderate</string>
    <string name="uvindex_level_high">High</string>
    <string name="uvindex_level_very_high">Very High</string>
    <string name="uvindex_level_extreme">Extreme</string>

    <!-- Weather conditions -->
    <string name="cloudiness_clear_sky">Sky is clear</string>

    <!-- Icon descriptions -->
    <string name="icon_humidity">Humidity Icon</string>
    <string name="icon_current_weather">Current Weather Icon</string>
    <string name="icon_weather_forecast">Weather Forecast Icon</string>
    <string name="icon_uvindex">UV Index Icon</string>
    <string name="icon_wind">Wind Icon</string>
    <string name="hourly_forecast_three_icon">Hourly Forecast Next 3 Hours Icon</string>

    <!-- Preferences strings -->
    <string name="preferences_category_units">Units</string>
    <string name="preferences_temperature_units">preferences_temperature_units</string>
    <string name="preferences_wind_speed_units">preferences_wind_speed_units</string>
    <string name="preferences_pressure_units">preferences_pressure_units</string>
    <string name="preferences_temperature_units_title">Temperature Units</string>
    <string name="preferences_temperature_units_summary">Set the temperature units</string>
    <string name="preferences_temperature_units_default">2</string>
    <string name="preferences_wind_speed_units_title">Wind Speed Units</string>
    <string name="preferences_wind_speed_units_summary">Set the wind speed units</string>
    <string name="preferences_wind_speed_units_default">2</string>
    <string name="preferences_pressure_units_title">Pressure Units</string>
    <string name="preferences_pressure_units_summary">Set the pressure units</string>
    <string name="preferences_pressure_units_default">2</string>

    <!-- Preferences arrays -->
    <string-array name="preferences_temperature_units_entries">
        <item name="fahrenheit">Fahrenheit (&#176;F)</item>
        <item name="celsius">Celsius (&#176;C)</item>
    </string-array>
    <string-array name="preferences_temperature_units_values">
        <item name="fahrenheit">1</item>
        <item name="celsius">2</item>
    </string-array>

    <string-array name="preferences_wind_speed_units_entries">
        <item name="km_h">Kilometers per hour (km/h)</item>
        <item name="m_s">Meters per second (m/s)</item>
    </string-array>
    <string-array name="preferences_wind_speed_units_values">
        <item name="km_h">1</item>
        <item name="m_s">2</item>
    </string-array>

    <string-array name="preferences_pressure_units_entries">
        <item name="mbar">Millibars (mbar)</item>
        <item name="kPa">Kilopascals (kPa)</item>
    </string-array>
    <string-array name="preferences_pressure_units_values">
        <item name="mbar">1</item>
        <item name="kPa">2</item>
    </string-array>

    <!--Notifications (Preferences) strings -->
    <string name="notifications_service_category_system">System</string>
    <string name="notifications_service_enabled">notifications_service_enabled</string>
    <string name="notifications_service_frequency">notifications_service_frequency</string>
    <string name="notifications_service_enabled_title">Enable Notifications</string>
    <string name="notifications_service_frequency_title">Frequency</string>
    <string name="notifications_service_enabled_summary">Enable or disable weather notifications</string>
    <string name="notifications_service_frequency_summary">Weather snapshot frequency</string>
    <string name="notifications_service_enabled_default">false</string>
    <string name="notifications_service_frequency_default">1</string>
    <string name="daily_forecast_analysis_count">2</string>
    <string name="hourly_forecast_analysis_count">8</string>

    <!-- Notifications (Preferences) arrays -->
    <string-array name="notifications_service_frequency_entries">
        <item name="hourly">Every hour</item>
        <item name="12hours">Every 12 hours</item>
        <item name="24hours">Every 24 hours</item>
    </string-array>

    <string-array name="notifications_service_frequency_values">
        <item name="hourly">1</item>
        <item name="12hours">12</item>
        <item name="24hours">24</item>
    </string-array>

    <!-- Alert code arrays -->
    <string-array name="alert_codes">
        <item>212</item> <!-- Heavy thunderstorm -->
        <item>232</item> <!-- Thunderstorm with heavy drizzle -->
        <item>302</item> <!-- Heavy intensity drizzle -->
        <item>312</item> <!-- Heavy intensity drizzle rain -->
        <item>313</item> <!-- Shower rain and drizzle -->
        <item>314</item> <!-- Heavy shower rain and drizzle -->
        <item>321</item> <!-- Shower drizzle -->
        <item>502</item> <!-- Heavy intensity rain -->
        <item>503</item> <!-- Very heavy rain -->
        <item>504</item> <!-- Extreme rain -->
        <item>511</item> <!-- Freezing rain -->
        <item>520</item> <!-- Light intensity shower rain -->
        <item>521</item> <!-- Shower rain -->
        <item>522</item> <!-- Heavy intensity shower rain -->
        <item>531</item> <!-- Ragged shower rain -->
        <item>602</item> <!-- Heavy snow -->
        <item>612</item> <!-- Shower sleet -->
        <item>615</item> <!-- Light rain and snow -->
        <item>616</item> <!-- Rain and snow -->
        <item>621</item> <!-- Shower snow -->
        <item>622</item> <!-- Heavy shower snow -->
        <item>781</item> <!-- Tornado -->
        <item>900</item> <!-- Tornado -->
        <item>901</item> <!-- Tropical storm -->
        <item>902</item> <!-- Hurricane -->
        <item>903</item> <!-- Cold -->
        <item>904</item> <!-- Hot -->
        <item>905</item> <!-- Windy -->
        <item>906</item> <!-- Hail -->
        <item>956</item> <!-- Strong breeze -->
        <item>957</item> <!-- High wind, near gale -->
        <item>958</item> <!-- Gale -->
        <item>959</item> <!-- Severe gale -->
        <item>960</item> <!-- Storm -->
        <item>961</item> <!-- Violent storm -->
    </string-array>

    <!-- Errors -->
    <string name="error_title">Oh no! This is really awkward!</string>
    <string name="error_subtitle">We detected an issue while processing your request.</string>
    <string name="error_notification_title">Issue encountered</string>

    <string name="error_details_not_available">Error details are not available.</string>
    <string name="error_empty_response_body">Response body did not contain required information.</string>
    <string name="error_response_error">Response was not successful.</string>
    <string name="error_current_weather_object_not_set">CurrentWeather object is null.</string>
    <string name="error_current_weather_object_properties_not_set">CurrentWeather object properties are not set.</string>
    <string name="error_weather_forecast_object_or_properties_not_set">WeatherForecast object or related properties are not set.</string>
    <string name="error_selected_location_not_set">Selected location has not been set.</string>
    <string name="error_cities_xml_error">File cities.xml contains invalid data.</string>
    <string name="error_providers_disabled">Required providers are not enabled.</string>
    <string name="error_last_known_location_error">Last known location could not be detected.</string>

</resources>
