<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notifications_service_category_system">

        <CheckBoxPreference
            android:key="notifications_service_enabled"
            android:title="@string/notifications_service_enabled_title"
            android:summary="@string/notifications_service_enabled_summary"
            android:defaultValue="@string/notifications_service_enabled_default" />

        <ListPreference
            android:key="notifications_service_frequency"
            android:title="@string/notifications_service_frequency_title"
            android:summary="@string/notifications_service_frequency_summary"
            android:entries="@array/notifications_service_frequency_entries"
            android:entryValues="@array/notifications_service_frequency_values"
            android:defaultValue="@string/notifications_service_frequency_default" />

    </PreferenceCategory>

</PreferenceScreen>