<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_initial"
    style="@style/RelativeLayout.Teal"
    tools:context="com.vk.android.mobileweatherguide.InitialActivity">

    <TextView
        style="@style/TextView.Headline.HorizontalCenter"
        android:id="@+id/initial_headline"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:text="@string/initial_location_heading" />

    <TextView
        style="@style/TextView.Subheading.HorizontalCenter"
        android:id="@+id/initial_subheading"
        android:layout_below="@id/initial_headline"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:text="@string/initial_location_subheading" />

    <AutoCompleteTextView
        android:id="@+id/citiesAutoCompleteField"
        android:layout_below="@id/initial_subheading"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDirtyWhite"
        android:hint="@string/location_autocomplete_hint"
        android:textColorHint="@color/colorLightTeal" />

    <TextView
        android:id="@+id/initial_subheading_under"
        style="@style/TextView.Subheading.HorizontalCenter"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:layout_below="@id/citiesAutoCompleteField"
        android:text="@string/location_help_text" />

    <Button
        style="@style/Button.LightTeal"
        android:id="@+id/location_select_current_location_button"
        android:layout_width="match_parent"
        android:layout_below="@id/initial_subheading_under"
        android:layout_marginTop="@dimen/large_gap_between_content_areas"
        android:onClick="setCurrentLocation"
        android:textColor="@color/colorMediumGrey"
        android:text="@string/location_use_device_location_button" />

    <TextView
        style="@style/TextView.Subheading.HorizontalCenter"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:layout_below="@id/location_select_current_location_button"
        android:text="@string/location_use_device_location_help_text" />

    <TextView
        style="@style/TextView.Subheading.HorizontalCenter"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/space_between_content_areas"
        android:text="@string/initial_location_change_hint" />

</RelativeLayout>
