<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    style="@style/DrawerLayout">

    <!-- Main content -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        style="@style/RelativeLayout"
        tools:context="com.vk.android.mobileweatherguide.MainActivity">

        <TextView
            style="@style/TextView.Subheading"
            android:id="@+id/current_weather_current_location"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:text="" />

        <ImageView
            android:layout_height="128dp"
            android:layout_width="128dp"
            android:id="@+id/current_weather_weather_icon"
            android:contentDescription="@string/icon_current_weather"
            android:layout_alignParentStart="true"
            android:background="@drawable/cloud_white"
            android:layout_below="@id/current_weather_current_location" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_temperature"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorLightTeal"
            android:textSize="@dimen/font_display_three"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_current_location"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_low_temperature"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/font_body"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_temperature"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_high_temperature"
            android:textSize="@dimen/font_body"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_temperature"
            android:layout_toStartOf="@id/current_weather_low_temperature"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_date"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorClearWhite"
            android:textSize="@dimen/font_subheading"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_high_temperature"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_description"
            android:layout_width="match_parent"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorClearWhite"
            android:textSize="@dimen/font_subheading"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_below="@id/current_weather_date"
            android:text="" />



        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/current_weather_uv_index_icon"
            android:contentDescription="@string/icon_uvindex"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:background="@drawable/uv_index_white"
            android:layout_below="@id/current_weather_description" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_uv_index"
            android:textSize="@dimen/font_subheading"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_description"
            android:layout_toEndOf="@id/current_weather_uv_index_icon"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_humidity"
            android:textSize="@dimen/font_subheading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_description"
            android:text="" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/current_weather_humidity_icon"
            android:contentDescription="@string/icon_humidity"
            android:layout_toStartOf="@id/current_weather_humidity"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:background="@drawable/humidity_white"
            android:layout_below="@id/current_weather_description" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_wind"
            android:textSize="@dimen/font_subheading"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_description"
            android:text="" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/current_weather_wind_icon"
            android:contentDescription="@string/icon_wind"
            android:layout_toStartOf="@id/current_weather_wind"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginEnd="@dimen/space_between_content_areas"
            android:background="@drawable/wind_white"
            android:layout_below="@id/current_weather_description" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_pressure"
            android:textSize="@dimen/font_subheading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/small_gap_between_content_areas"
            android:layout_marginStart="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_wind_icon"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_sunset"
            android:textSize="@dimen/font_subheading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_marginStart="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_pressure"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_sunrise"
            android:textSize="@dimen/font_subheading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_marginStart="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_sunset"
            android:text="" />

        <TextView
            style="@style/TextView"
            android:id="@+id/current_weather_cloudiness"
            android:textSize="@dimen/font_subheading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/space_between_content_areas"
            android:layout_marginStart="@dimen/space_between_content_areas"
            android:layout_below="@id/current_weather_sunrise"
            android:text="" />


    </RelativeLayout>

    <!-- ListView that displays items in the drawer -->
    <ListView android:id="@+id/drawer_list_view"
        style="@style/DrawerLayout.ListView"/>

</android.support.v4.widget.DrawerLayout>